# securityshield

./: .gitignore  LICENSE  README.md
python/: ml_interface.py
python/ml/: feature_extractor.py  threat_model.py  trainer.py
python/models/: threat_detector.pkl
scripts/setup/: validate_setup.sh
src/: Cargo.toml
src/examples/: test_ai.rs  test_keylogger.rs  test_scanner.rs  test_wifi.rs
src/src/: lib.rs
src/src/ai/: mod.rs  predictor.rs
src/src/auth/: mod.rs
src/src/config/: manager.rs  mod.rs
src/src/core/: engine.rs  mod.rs  threat.rs
src/src/ipc/: mod.rs
src/src/modules/: mod.rs
src/src/modules/antivirus/: hashing.rs  mod.rs  scanner.rs  signatures.rs  virustotal.rs
src/src/modules/keylogger_detector/: detector.rs  input_monitor.rs  mod.rs  process_monitor.rs
src/src/modules/wifi_analyzer/: detector.rs  mod.rs  network_info.rs  scanner.rs  security_checker.rs
src/src/security/: mod.rs
src/src/updater/: mod.rs
src/src/utils/: mod.rs
ui/: .flutter-plugins-dependencies  .metadata  pubspec.yaml
ui/.dart_tool/: package_config.json  package_graph.json  version
ui/.dart_tool/flutter_build/4caae6cad67cdea39db732548dd2e85c/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
ui/.dart_tool/flutter_build/4dfa57bcda019955f9da8de33a4a345d/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
ui/.dart_tool/flutter_build/6aeff7baf8039428bf75e04a37617e79/: .filecache  android_aot_bundle_release_android-arm.stamp  android_aot_bundle_release_android-arm64.stamp  android_aot_bundle_release_android-x64.stamp  android_aot_release_android-arm.stamp  android_aot_release_android-arm64.stamp  android_aot_release_android-x64.stamp  aot_android_asset_bundle.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
ui/.dart_tool/flutter_build/e74fe521bec89987137fc0b0ef2aada3/: .filecache  aot_elf_release.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  linux_aot_bundle.stamp  linux_engine_sources.d  outputs.json  release_bundle_linux-x64_assets.stamp  unpack_linux.stamp
ui/android/: local.properties
ui/android/app/src/main/: AndroidManifest.xml
ui/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ui/lib/: main.dart
ui/lib/screens/: ai_screen.dart  antivirus_screen.dart  dashboard_screen.dart  keylogger_screen.dart  wifi_screen.dart
ui/lib/theme/: app_theme.dart
ui/linux/flutter/ephemeral/: generated_config.cmake
ui/linux/flutter/ephemeral/.plugin_symlinks/: path_provider_linux  shared_preferences_linux
ui/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
ui/windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows  shared_preferences_windows
